<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Graphene_control</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_item0">mode 0</string>
    <string name="menu_item1">mode 1</string>
	<string name="menu_item2">mode 2</string>
	<string name="menu_item3">mode 3</string>
    
    
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="label_services">Services</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">NTUT UTL</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="action_demo">Demo</string>

    <string name="title_demo_accelerometer">Accelerometer Demo</string>
    <string name="title_demo_gyroscope">Gyroscope Demo</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="test_open">abc</string>
</resources>
