<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.graphene_control.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item 
        android:id="@+id/menu_item0" 
        android:title="@string/menu_item0">    
    </item>
    <item 
        android:id="@+id/menu_item1" 
        android:title="@string/menu_item1">    
    </item>
    <item 
        android:id="@+id/menu_item2" 
        android:title="@string/menu_item2">    
    </item>
    <item 
        android:id="@+id/menu_item3" 
        android:title="@string/menu_item3">    
    </item>

</menu>
